webhook/mutating-admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: example-mutating-webhook
webhooks:
  - name: mutate.example.com
    clientConfig:
      service:
        name: webhook-server
        namespace: default
        path: /mutate
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJRENDQWdpZ0F3SUJBZ0lVWEF0WjB5UEFVSzNpNUhkejI4UmJvbnhSVmc0d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0pURWpNQ0VHQTFVRUF3d2FkMlZpYUc5dmF5MXpaWEoyWlhJdVpHVm1ZWFZzZEM1emRtTXdIaGNOTWpVdwpNekV6TURRMU16VTRXaGNOTWpZd016RXpNRFExTXpVNFdqQWxNU013SVFZRFZRUUREQnAzWldKb2IyOXJMWE5sCmNuWmxjaTVrWldaaGRXeDBMbk4yWXpDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQU5ZVWlValpMbEJRZzZ6K2F5dHRySzB2Z0VYQ21saFRGeEZjdEorNGdkSk9PMUNkdER2RnJmcnVMSU1EYzlFOApnajRsSlBEWUg2 [...]
    rules:
      - operations: ["CREATE", "DELETE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
      - operations: ["CREATE", "UPDATE", "DELETE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["events"]
    admissionReviewVersions: ["v1"]
    sideEffects: None
